@@ -119,7 +119,7 @@ OBJDIR = .
 
 
 # Path to the LUFA library
-LUFA_PATH = ../../
+LUFA_PATH = ../../../
 
 
 # LUFA library compile-time options
